Cleaned up Globals

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,10 @@ gradlew.bat
 # Saved data
 ChannelIDs.txt
 SurrenderUpdates.txt
+mylobot.properties
 
 # Will add later; empty and useless right now
 src/test/
-src/main/resources/
+src/main/resources/*.gif
+src/main/resources/*.jpg
+src/main/resources/*.png
