--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ gradlew
 gradlew.bat
 
 # Saved data
-ChannelIDs.txt
-SurrenderUpdates.txt
+*ChannelIDs.txt
+*Updates.txt
 mylobot.properties
 
 # Will add later; empty and useless right now
