--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'DiscordBot'
-version '1.3.0'
+version '2.1.0'
 
 apply plugin: 'java'
 apply plugin: 'scala'
@@ -8,6 +8,11 @@ apply plugin: 'application'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 mainClassName = 'main.Bot'
+
+sourceSets.main.scala.srcDir "src/main/java"
+sourceSets.main.java.srcDirs = []
+sourceSets.test.scala.srcDir "src/test/java"
+sourceSets.test.java.srcDirs = []
 
 repositories {
     mavenCentral()
