--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,7 @@ gradlew.bat
 SurrenderUpdates.txt
 TwitchStreamers.txt
 mylobot.properties
+Music
 
 # Will add later; empty and useless right now
 src/test/
-src/main/resources/*.gif
-src/main/resources/*.jpg
-src/main/resources/*.png
