Removed 'AtEveryone' folder

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ SurrenderUpdates.txt
 TwitchStreamers.txt
 mylobot.properties
 Music
+AtEveryone
 
 # Will add later; empty and useless right now
 src/test/
