--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,12 @@
 group 'DiscordBot'
-version '2.10.3'
+version '3.10.3'
 
 apply plugin: 'java'
-apply plugin: 'scala'
 apply plugin: 'application'
 
 sourceCompatibility = 1.10
 targetCompatibility = 1.10
 mainClassName = 'main.Bot'
-
-sourceSets.main.scala.srcDir "src/main/java"
-sourceSets.main.java.srcDirs = []
-sourceSets.test.scala.srcDir "src/test/java"
-sourceSets.test.java.srcDirs = []
 
 repositories {
     mavenCentral()
@@ -20,10 +14,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '5.2.0'
-    compile group: 'org.scala-lang',            name: 'scala-library',  version: '2.12.6'
-    compile group: 'com.sedmelluq',             name: 'lavaplayer',     version: '1.3.3'
-    compile group: 'net.dv8tion',               name: 'JDA',            version: '3.6.0_375'
+//    testCompile group: 'junit', name: 'junit', version: '5.2.0'
+    compile group: 'com.sedmelluq',             name: 'lavaplayer',     version: '1.3.6'
+    compile group: 'net.dv8tion',               name: 'JDA',            version: '3.6.0_376'
     compile group: 'org.json',                  name: 'json',           version: '20170516'
     compile group: 'org.apache.logging.log4j',  name: 'log4j-api',      version: '2.11.0'
     compile group: 'org.apache.logging.log4j',  name: 'log4j-core',     version: '2.11.0'
