--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'application'
 
 sourceCompatibility = 1.10
 targetCompatibility = 1.10
-mainClassName = 'main.Bot' // TODO: try deleting this
+mainClassName = 'main.Bot'
 
 repositories {
     mavenCentral()
@@ -14,16 +14,15 @@ repositories {
 }
 
 dependencies {
-//    testCompile group: 'junit', name: 'junit', version: '5.2.0'
-    compile group: 'com.sedmelluq',             name: 'lavaplayer',     version: '1.3.6'
-    compile group: 'net.dv8tion',               name: 'JDA',            version: '3.6.0_376'
-    compile group: 'org.json',                  name: 'json',           version: '20170516'
-    compile group: 'org.apache.logging.log4j',  name: 'log4j-api',      version: '2.11.0'
-    compile group: 'org.apache.logging.log4j',  name: 'log4j-core',     version: '2.11.0'
+    // TODO: make log4j-api runtimeOnly, or remove?
+    implementation group: 'com.sedmelluq',             name: 'lavaplayer',     version: '1.3.7'
+    implementation group: 'net.dv8tion',               name: 'JDA',            version: '3.7.1_401'
+    implementation group: 'org.apache.logging.log4j',  name: 'log4j-api',      version: '2.11.0'
+    implementation group: 'org.apache.logging.log4j',  name: 'log4j-core',     version: '2.11.0'
 }
 
-
 jar {
+    // TODO: learn more about manifest, specifically how it applies to Java 10
     manifest {
         attributes(
                 'Implementation-Title': 'MyloBot',
