--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.11.1'
     implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.10'
     implementation group: 'net.dv8tion',                name: 'JDA',            version: '3.8.1_457'
+    implementation group: 'com.google.api-client',      name: 'google-api-client',   version: '1.25.0'
 }
 
 jar {
