--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,11 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.11.1'
+    implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.11.2'
     implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.10'
-    implementation group: 'net.dv8tion',                name: 'JDA',            version: '3.8.1_457'
-    implementation group: 'com.google.api-client',      name: 'google-api-client',   version: '1.25.0'
+    implementation group: 'net.dv8tion',                name: 'JDA',            version: '3.8.3_460'
+//    implementation group: 'com.google.api-client',      name: 'google-api-client',   version: '1.25.0'
+//    implementation group: 'com.google.apis',            name: 'google-api-services-youtube',    version: 'v3-rev182-1.22.0'
 }
 
 jar {
