--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'DiscordBot'
-version '3.0.0-SNAPSHOT'
+version '3.0.0'
 
 apply plugin: 'java'
 apply plugin: 'application'
@@ -17,8 +17,6 @@ dependencies {
     implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.11.2'
     implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.17'
     implementation group: 'net.dv8tion',                name: 'JDA',            version: '3.8.3_463'
-//    implementation group: 'com.google.api-client',      name: 'google-api-client',   version: '1.25.0'
-//    implementation group: 'com.google.apis',            name: 'google-api-services-youtube',    version: 'v3-rev182-1.22.0'
 }
 
 jar {
