--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.11.2'
-    implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.17'
+    implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.12.1'
+    implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.20'
     implementation group: 'net.dv8tion',                name: 'JDA',            version: '3.8.3_463'
 }
 
@@ -23,8 +23,13 @@ jar {
     manifest {
         attributes(
                 'Implementation-Title': 'MyloBot',
-                'Implementation-Version': version,
-                'Main-Class': 'main.Bot'
+                'Main-Class': mainClassName
         )
+    }
+
+    from {
+        configurations.compileClasspath.collect {
+            (it.isDirectory() || it.name[-3..-1] == 'pom') ? it : zipTree(it)
+        }
     }
 }
