Fixed fatjar to work with Gradle 7 deprecations

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 }
 
 jar {
+	duplicatesStrategy = DuplicatesStrategy.INCLUDE
+
 	manifest {
 		attributes(
 				'Implementation-Title': 'MyloBot',
