--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
-#Mon Feb 17 11:56:29 EST 2020
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.2-all.zip
+#Fri Mar 27 23:12:23 EDT 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
