--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'DiscordBot'
-version '4.5.1'
+version '4.6.0'
 
 apply plugin: 'java'
 apply plugin: 'application'
@@ -10,13 +10,16 @@ mainClassName = 'main.Bot'
 
 repositories {
 	mavenCentral()
-	jcenter()
+	maven {
+		name 'm2-dv8tion'
+		url 'https://m2.dv8tion.net/releases'
+	}
 }
 
 dependencies {
 	implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.14.1'
-	implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.73'
-	implementation group: 'net.dv8tion',                name: 'JDA',            version: '4.2.0_247'
+	implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.76'
+	implementation group: 'net.dv8tion',                name: 'JDA',            version: '4.2.1_262'
 	implementation group: 'com.squareup.okhttp3',       name: 'okhttp',         version: '4.9.0'
 }
 
