--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-group 'DiscordBot'
-version '4.6.0'
+group 'com.patrickubelhor'
+version '4.7.0'
 
 apply plugin: 'java'
 apply plugin: 'application'
@@ -21,17 +21,19 @@ dependencies {
 	implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.76'
 	implementation group: 'net.dv8tion',                name: 'JDA',            version: '4.2.1_262'
 	implementation group: 'com.squareup.okhttp3',       name: 'okhttp',         version: '4.9.0'
+	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.2'
+	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml',  version: '2.12.2'
 }
 
 jar {
 	duplicatesStrategy = DuplicatesStrategy.INCLUDE
 
-	manifest {
+	manifest({
 		attributes(
 				'Implementation-Title': 'MyloBot',
 				'Main-Class': mainClassName
 		)
-	}
+	})
 
 	from {
 		configurations.runtimeClasspath.collect {
