--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.patrickubelhor'
-version '5.2.1'
+version '6.0.0'
 
 apply plugin: 'java'
 apply plugin: 'application'
@@ -10,16 +10,12 @@ mainClassName = 'main.Bot'
 
 repositories {
 	mavenCentral()
-	maven {
-		name 'm2-dv8tion'
-		url 'https://m2.dv8tion.net/releases'
-	}
 }
 
 dependencies {
 	implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.20.0'
 	implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.78'
-	implementation group: 'net.dv8tion',                name: 'JDA',            version: '4.4.1_353'
+	implementation group: 'net.dv8tion',                name: 'JDA',            version: '5.0.0-beta.18'
 	implementation group: 'com.squareup.okhttp3',       name: 'okhttp',         version: '4.10.0'
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
 	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml',  version: '2.14.2'
