--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,18 @@
 group 'com.patrickubelhor'
-version '5.2.1'
+version '6.0.0'
 
 apply plugin: 'java'
 apply plugin: 'application'
 
-sourceCompatibility = 1.17
-targetCompatibility = 1.17
-mainClassName = 'main.Bot'
+java {
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
+}
+
+application {
+	mainClass.set('main.Bot')
+}
+
 
 repositories {
 	mavenCentral()
@@ -17,23 +23,24 @@ repositories {
 }
 
 dependencies {
-	implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.20.0'
+	implementation group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '2.1.1'
+	implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.22.0'
 	implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.78'
-	implementation group: 'net.dv8tion',                name: 'JDA',            version: '4.4.1_353'
-	implementation group: 'com.squareup.okhttp3',       name: 'okhttp',         version: '4.10.0'
-	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
-	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml',  version: '2.14.2'
+	implementation group: 'net.dv8tion',                name: 'JDA',            version: '5.0.0-beta.18'
+	implementation group: 'com.squareup.okhttp3',       name: 'okhttp',         version: '4.12.0'
+	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.0'
+	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml',  version: '2.16.0'
 }
 
 jar {
 	duplicatesStrategy = DuplicatesStrategy.INCLUDE
 
-	manifest({
+	manifest {
 		attributes(
-				'Implementation-Title': 'MyloBot',
-				'Main-Class': mainClassName
+			'Implementation-Title': 'MyloBot',
+			'Main-Class': application.mainClass
 		)
-	})
+	}
 
 	from {
 		configurations.runtimeClasspath.collect {
