--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.patrickubelhor'
-version '6.2.0'
+version '6.2.1'
 
 apply plugin: 'java'
 apply plugin: 'application'
@@ -17,15 +17,14 @@ application {
 repositories {
 	mavenCentral()
 	maven {
-		name 'm2-dv8tion'
-		url 'https://m2.dv8tion.net/releases'
+		url 'https://jitpack.io'
 	}
 }
 
 dependencies {
 	implementation group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '2.1.1'
 	implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.22.0'
-	implementation group: 'com.sedmelluq',              name: 'lavaplayer',     version: '1.3.78'
+	implementation group: 'dev.arbjerg',				name: 'lavaplayer',		version: '2.0.4'
 	implementation group: 'net.dv8tion',                name: 'JDA',            version: '5.0.0-beta.18'
 	implementation group: 'com.squareup.okhttp3',       name: 'okhttp',         version: '4.12.0'
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.0'
