--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.patrickubelhor'
-version '6.2.2'
+version '6.2.3'
 
 apply plugin: 'java'
 apply plugin: 'application'
@@ -16,16 +16,16 @@ application {
 
 repositories {
 	mavenCentral()
-	maven {
-		url 'https://jitpack.io'
-	}
+	maven { url 'https://jitpack.io' }
+	maven { url 'https://maven.lavalink.dev/releases' }
 }
 
 dependencies {
 	implementation group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '3.0.0'
 	implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.23.1'
-	implementation group: 'dev.arbjerg',				name: 'lavaplayer',		version: '2.1.1'
-	implementation group: 'net.dv8tion',                name: 'JDA',            version: '5.0.0-beta.22'
+	implementation group: 'dev.arbjerg',				name: 'lavaplayer',		version: '2.2.0'
+	implementation group: 'dev.lavalink.youtube',		name: 'v2',				version: '1.3.0'
+	implementation group: 'net.dv8tion',                name: 'JDA',            version: '5.0.0-beta.24'
 	implementation group: 'com.squareup.okhttp3',       name: 'okhttp',         version: '4.12.0'
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.0'
 	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml',  version: '2.16.0'
