--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
-group 'com.patrickubelhor'
-version '6.3.1'
+group = 'com.patrickubelhor'
+version = '6.3.2'
 
 apply plugin: 'java'
 apply plugin: 'application'
 
 java {
-	sourceCompatibility = JavaVersion.VERSION_21
-	targetCompatibility = JavaVersion.VERSION_21
+	sourceCompatibility = JavaVersion.VERSION_25
+	targetCompatibility = JavaVersion.VERSION_25
 }
 
 application {
@@ -16,19 +16,19 @@ application {
 
 repositories {
 	mavenCentral()
-	maven { url 'https://jitpack.io' }
-	maven { url 'https://maven.lavalink.dev/releases' }
+	maven { url = 'https://jitpack.io' }
+	maven { url = 'https://maven.lavalink.dev/releases' }
 }
 
 dependencies {
-	implementation group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '3.0.0'
-	implementation group: 'org.apache.logging.log4j',   name: 'log4j-core',     version: '2.25.3'
-	implementation group: 'dev.arbjerg',				name: 'lavaplayer',		version: '2.2.6'
-	implementation group: 'dev.lavalink.youtube',		name: 'v2',				version: '1.16.0'
-	implementation group: 'net.dv8tion',                name: 'JDA',            version: '5.2.1'
-	implementation group: 'com.squareup.okhttp3',       name: 'okhttp',         version: '4.12.0'
-	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.5'
-	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml',  version: '2.18.5'
+	implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
+	implementation 'org.apache.logging.log4j:log4j-core:2.25.3'
+	implementation 'dev.arbjerg:lavaplayer:2.2.6'
+	implementation 'dev.lavalink.youtube:v2:1.16.0'
+	implementation 'net.dv8tion:JDA:6.2.0'
+	implementation 'com.squareup.okhttp3:okhttp:5.3.2'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.5'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.18.5'
 }
 
 jar {
